--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.2"
   },
+  "devDependencies": {
+    "bootstrap": "^4.2.1",
+    "node-sass-chokidar": "^1.3.4",
+    "npm-run-all": "^4.1.5"
+  },
   "scripts": {
     "start": "react-scripts start",
+    "start-all": "npm-run-all -p watch-css start",
     "build": "react-scripts build",
+    "build-all": "npm-run-all build-css build",
+    "build-css": "node-sass-chokidar --include-path ./src/style --include-path ./node_modules ./src/style/scss/app.scss -o ./src/style/css",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src/style --include-path ./node_modules --watch ./src/style/scss/app.scss ./src/style/css/app.css"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +30,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "homepage": "./"
 }
