--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "google-map-react": "^1.1.4",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-google-maps": "^9.4.5",
     "react-scripts": "2.1.2",
-    "react-scroll-parallax": "^1.3.5"
+    "react-scroll-parallax": "^1.3.5",
+    "recompose": "^0.30.0"
   },
   "devDependencies": {
     "bootstrap": "^4.2.1",
